[package]
name = "dnas"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/thomgray/dnas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = {version = "4.1.1", features = ["derive"] }
colored = "2.0.0"
nom = "7.1.2"
rand = "0.8.5"
